--- a/index.html
+++ b/index.html
@@ -1,87 +1,43 @@
 <!DOCTYPE html>
-<html>
-   <head>
-      <meta charset="utf-8">
-      <link rel="icon" href="images/icon.png">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-      <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
-      <link rel="stylesheet" href="style/main.css">
-      <title>Beer Me!</title>
-   </head>
-   <body>
-      <nav class="navbar navbar-default navbar-fixed-top">
-         <div class="container-fluid">
-            <div class="navbar-header">
-               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-               <span class="sr-only">Toggle navigation</span>
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-               <span class="icon-bar"></span>
-               </button>
-               <a class="navbar-brand" href="index.html">BEER ME!</a>
-            </div>
-            <div class="navbar-header">
-               <img src="images/icon.png">
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-               <ul class="nav navbar-nav navbar-right">
-                  <li><a href="about.html" class="link">About Me</a></li>
-                  <li><a href="contact.html" class="link">Contact Me</a></li>
-               </ul>
-            </div>
-         </div>
-      </nav>
-      <div class="container">
-         <div class="row">
-            <div class="col-xs-12 col-md-12 col-lg-6">
-               <h1 class="title">BEER ME!</h1>
-               <h5>Welcome to BEER ME! Let us find you a local brewery.</h5>
-               <img src="images/beer.jpg" id="beer">
-            </div>
-            <div class="col-xs-12 col-md-12 col-lg-6">
-               <h4>Please search by city and state</h4>
-               <form>
-                  <label for="city" class="city">City</label>
-                  <input type="text" name="city" placeholder="Denver" class="city" id="city">
-                  <label for="state" class="state">State</label>
-                  <input type="text" name="state" placeholder="Colorado" class="state" id="state">
-                  <input id="submit" name="submit" type="submit" value="Submit">
-               </form>
-            </div>
-            <div class="col-xs-12 col-md-10 col-lg-10 col-lg-offset-1" style="height:400px;overflow:auto;margin-bottom:50px">
-               <h3 class="quote">Beer is living proof that God loves use and wants us to be happy</h3>
-               <table class="table table-striped table-hover " summary="Events description">
-                  <thead>
-                     <tr>
-                        <th id="brewery">Brewery</th>
-                        <th id="desc">Description</th>
-                        <th id="website">Website </th>
-                     </tr>
-                  </thead>
-                  <tbody id="eventsTable">
-                     <tr>
-                     </tr>
-                  </tbody>
-               </table>
-            </div>
-         </div>
+    <html>
+        <head>
+            <meta charset="utf-8">
+            <link href= "https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/cyborg/bootstrap.min.css">  <!--change for different bootstrap theme -->
+            <link rel="stylesheet" href="style/landing.css"> <!--change for different css file name -->
+            <title></title>
+      </head>
+<body>
+
+    <div id="container">
+      <div class="pour"></div>
+      <div id="beaker">
+        <div class="beer-foam">
+          <div class="foam-1"></div>
+          <div class="foam-2"></div>
+          <div class="foam-3"></div>
+          <div class="foam-4"></div>
+          <div class="foam-5"></div>
+          <div class="foam-6"></div>
+          <div class="foam-7"></div>
+        </div>
+
+        <div id="liquid">
+
+          <div class="bubble bubble1"></div>
+          <div class="bubble bubble2"></div>
+          <div class="bubble bubble3"></div>
+          <div class="bubble bubble4"></div>
+          <div class="bubble bubble5"></div>
+        </div>
       </div>
-      <nav class="navbar navbar-default" id="nav-bottom">
-         <div class="container-fluid">
-            <div class="navbar-header">
-               <img src="images/icon.png">
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-               <ul class="nav navbar-nav navbar-right">
-                  <li><a href="index.html" class="link">&copy;Erik Mura 2016</a></li>
-               </ul>
-            </div>
-         </div>
-      </nav>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-      <script src="style/main.js"></script>
+    </div>
+
+    <h2 class="animated drunk">Fill'er Up Barkeeper!</h2>
+
+    <button><a href="index.html">Enter</button>
+
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-   </body>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+      <script src="style/landing.js"></script> <!--change for different JS file name -->
+</body>
 </html>
