rearranged the home page

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
     <html>
         <head>
             <meta charset="utf-8">
-            <link href= "https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/cyborg/bootstrap.min.css">  <!--change for different bootstrap theme -->
-            <link rel="stylesheet" href="style/landing.css"> <!--change for different css file name -->
-            <title></title>
+            <link rel="stylesheet" href="style/landing.css">
+            <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet"> 
+            <title>Beer Me!</title>
       </head>
 <body>
-
+    <div class="header">
+        <h1 class="title">BEER ME!</h1>
+    </div>
     <div id="container">
       <div class="pour"></div>
       <div id="beaker">
@@ -34,10 +36,14 @@
 
     <h2 class="animated drunk">Fill'er Up Barkeeper!</h2>
 
-    <button><a href="index.html">Enter</button>
+    <div class="button-box">
+        <a class="btn" href="main.html">Enter</a>
+    </div>
 
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-      <script src="style/landing.js"></script> <!--change for different JS file name -->
+      <script src="style/landing.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </body>
 </html>
