--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">BEER ME!</a>
+                    <a class="navbar-brand" href="main.html">BEER ME!</a>
                     <img src="images/icon.png">
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
