--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
                <span class="icon-bar"></span>
                <span class="icon-bar"></span>
                </button>
-               <a class="navbar-brand" href="index.html">BEER ME!</a>
+               <a class="navbar-brand" href="main.html">BEER ME!</a>
             </div>
             <div class="navbar-header">
                <img src="images/icon.png">
@@ -35,11 +35,18 @@
       </nav>
       <div class="container">
          <div class="row">
-            <div class="col-xs-12 col-md-12 col-lg-6">
-               <h1 class="title">BEER ME!</h1>
-               <h5>Welcome to BEER ME! Let us find you a local brewery.</h5>
-               <img src="images/beer.jpg" id="beer">
-            </div>
+             <div class="col-xs-12 col-md-12 col-lg-6" style="height:400px;overflow:auto;margin-bottom:50px">
+                <h3 class="quote">Beer is living proof that God loves use and wants us to be happy</h3>
+                <table class="table table-striped table-hover " summary="Events description">
+                   <thead>
+                      <tr>
+                         <th id="brewery">Brewery</th>
+                         <th id="desc">Description</th>
+                         <th id="website">Website </th>
+                      </tr>
+                   </thead>
+                </table>
+             </div>
             <div class="col-xs-12 col-md-12 col-lg-6">
                <h4>Please search by city and state</h4>
                <form>
@@ -49,22 +56,6 @@
                   <input type="text" name="state" placeholder="Colorado" class="state" id="state">
                   <input id="submit" name="submit" type="submit" value="Submit">
                </form>
-            </div>
-            <div class="col-xs-12 col-md-10 col-lg-10 col-lg-offset-1" style="height:400px;overflow:auto;margin-bottom:50px">
-               <h3 class="quote">Beer is living proof that God loves use and wants us to be happy</h3>
-               <table class="table table-striped table-hover " summary="Events description">
-                  <thead>
-                     <tr>
-                        <th id="brewery">Brewery</th>
-                        <th id="desc">Description</th>
-                        <th id="website">Website </th>
-                     </tr>
-                  </thead>
-                  <tbody id="eventsTable">
-                     <tr>
-                     </tr>
-                  </tbody>
-               </table>
             </div>
          </div>
       </div>
