Added fade in on landing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <head>
             <meta charset="utf-8">
             <link rel="stylesheet" href="style/landing.css">
-            <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet"> 
+            <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
             <title>Beer Me!</title>
       </head>
 <body>
@@ -36,7 +36,7 @@
 
     <h2 class="animated drunk">Fill'er Up Barkeeper!</h2>
 
-    <div class="button-box">
+    <div class="hidden" id="button">
         <a class="btn" href="main.html">Enter</a>
     </div>
 
