--- a/main.html
+++ b/main.html
@@ -49,11 +49,11 @@
              </div>
             <div class="col-xs-12 col-md-12 col-lg-6">
                <h4>Please search by city and state</h4>
-               <form>
+               <form id="search">
                   <label for="city" class="city">City</label>
-                  <input type="text" name="city" placeholder="Denver" class="city" id="city">
+                  <input type="text" name="city" placeholder="Denver" class="city" id="city" required>
                   <label for="state" class="state">State</label>
-                  <input type="text" name="state" placeholder="Colorado" class="state" id="state">
+                  <input type="text" name="state" placeholder="Colorado" class="state" id="state" required>
                   <input id="submit" name="submit" type="submit" value="Submit">
                </form>
             </div>
