--- a/main.html
+++ b/main.html
@@ -35,18 +35,20 @@
       </nav>
       <div class="container">
          <div class="row">
+             <h3 class="quote">Beer is living proof that God loves use and wants us to be happy</h3>
              <div class="col-xs-12 col-md-12 col-lg-6" style="height:400px;overflow:auto;margin-bottom:50px">
-                <h3 class="quote">Beer is living proof that God loves use and wants us to be happy</h3>
-                <table class="table table-striped table-hover " summary="Events description">
-                   <thead>
-                      <tr>
-                         <th id="brewery">Brewery</th>
-                         <th id="desc">Description</th>
-                         <th id="website">Website </th>
-                      </tr>
-                   </thead>
-                </table>
-             </div>
+                    <table class="table table-striped table-fixed">
+                        <thead>
+                            <tr>
+                                <th id="brewery">Brewery</th>
+                                <th id="desc">Description</th>
+                                <th id="website">Website </th>
+                            </tr>
+                        </thead>
+                        <tbody class="output">
+                        </tbody>
+                    </table>
+            </div>
             <div class="col-xs-12 col-md-12 col-lg-6">
                <h4>Please search by city and state</h4>
                <form id="search">
