google maps working, wont reset

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
     </div>
 
-    <h2 class="animated drunk">Fill'er Up Barkeeper!</h2>
+    <h2 class="animated drunk">Beer me bartender!</h2>
 
     <div class="hidden" id="button">
         <a class="btn" href="main.html">Enter</a>
