--- a/main.html
+++ b/main.html
@@ -33,8 +33,8 @@
             </div>
          </div>
       </nav>
+      <h3 class="quote">Beer is living proof that God loves use and wants us to be happy</h3>
       <div class="container">
-          <h3 class="quote">Beer is living proof that God loves use and wants us to be happy</h3>
          <div class="row">
              <div class="col-xs-12 col-md-12 col-lg-6">
                 <h4>Please search by city and state</h4>
@@ -61,21 +61,17 @@
             </div>
          </div>
       </div>
-      <nav class="navbar navbar-default" id="nav-bottom">
-         <div class="container-fluid">
-            <div class="navbar-header">
-               <img src="images/icon.png">
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-               <ul class="nav navbar-nav navbar-right">
-                  <li><a href="index.html" class="link">&copy;Erik Mura 2016</a></li>
-               </ul>
-            </div>
+
+      <!-- Map -->
+         <div class="col-xs-12 col-md-12 col-lg-12">
+           <div class = "map" id="map"></div>
          </div>
-      </nav>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA71CTObqTgTCh4Nt_uSbPf2yrGXCpD_Ug" async defer></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
       <script src="style/main.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     </script>
    </body>
 </html>
