--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
       <h3 class="quote">Beer is living proof that God loves use and wants us to be happy</h3>
       <div class="container">
          <div class="row">
-             <div class="col-xs-12 col-md-12 col-lg-6">
+             <div class="col-xs-12 col-md-12 col-lg-6 text-center">
                 <h4>Please search by city and state</h4>
                 <form id="search">
                    <label for="city" class="city">City</label>
@@ -45,6 +45,7 @@
                    <input type="text" name="state" placeholder="Colorado" class="state" id="state" required>
                    <input id="submit" name="submit" type="submit" value="Submit">
                 </form>
+                <a href="#map"><button>Jump to Map</button></a>
              </div>
              <div class="col-xs-12 col-md-12 col-lg-6" style="height:400px;overflow:auto;margin-bottom:50px">
                     <table class="table table-striped table-fixed">
@@ -65,6 +66,7 @@
       <!-- Map -->
          <div class="col-xs-12 col-md-12 col-lg-12">
            <div class = "map" id="map"></div>
+           <a name="map">
          </div>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA71CTObqTgTCh4Nt_uSbPf2yrGXCpD_Ug" async defer></script>
