--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-lg-offset-3">
-                    <h1 class="title">ABOUT ME!</h1>
+                    <h1 class="title">About Me</h1>
                     <p>My name is Erik Mura and I am a student at Galvanize. This is my very first web app I've created, I hope you like it. Please feel free to go search for breweries all over the US!</p>
                 </div>
             </div>
