--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-6 col-md-6 col-lg-6 col-lg-offset-3">
-                    <h1 class="title">CONTACT ME!</h1>
+                    <h1 class="title">Contact Me</h1>
                     <h5>Please contact me below!</h5>
                 </div>
             </div>
@@ -48,7 +48,7 @@
             </div>
             <button type="submit" class="btn btn-primary">Send</button>
         </form>
-        
+
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script src="style/main.js"></script>
