--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       </head>
 <body>
     <div class="header">
-        <h1 class="title">BEER ME!</h1>
+        <h1 class="title">Beer Me!</h1>
     </div>
     <div id="container">
       <div class="pour"></div>
@@ -24,7 +24,6 @@
         </div>
 
         <div id="liquid">
-
           <div class="bubble bubble1"></div>
           <div class="bubble bubble2"></div>
           <div class="bubble bubble3"></div>
@@ -34,7 +33,7 @@
       </div>
     </div>
 
-    <h2 class="animated drunk">Beer me bartender!</h2>
+    <!-- <h2 class="animated drunk">Beer me bartender!</h2> -->
 
     <div class="hidden" id="button">
         <a class="btn" href="main.html">Enter</a>
