--- a/main.html
+++ b/main.html
@@ -34,22 +34,74 @@
          </div>
       </nav>
       <h3 class="quote">Beer is living proof that God loves use and wants us to be happy</h3>
-      <div class="container">
+      <div class="container-fluid">
          <div class="row">
-             <div class="col-xs-12 col-md-12 col-lg-6">
+             <div class="col-xs-12 col-md-12 col-lg-4">
                 <h4>Please search by city and state</h4>
                 <form id="search">
                    <label for="city" class="city">City</label>
                    <input type="text" name="city" placeholder="Denver" class="city" id="city" required>
                    <label for="state" class="state">State</label>
-                   <input type="text" name="state" placeholder="Colorado" class="state" id="state" required>
+                   <select class="form-control" id="state" required data-width="auto">
+                        <option value="" disabled selected>Choose State</option>
+                    	<option value="Alabama">Alabama</option>
+                    	<option value="Alaska">Alaska</option>
+                    	<option value="Arizona">Arizona</option>
+                    	<option value="Arkansas">Arkansas</option>
+                    	<option value="California">California</option>
+                    	<option value="Colorado">Colorado</option>
+                    	<option value="Connecticut">Connecticut</option>
+                    	<option value="Delaware">Delaware</option>
+                    	<option value="Florida">Florida</option>
+                    	<option value="Georgia">Georgia</option>
+                    	<option value="Hawaii">Hawaii</option>
+                    	<option value="Idaho">Idaho</option>
+                    	<option value="Illinois">Illinois</option>
+                    	<option value="Indiana">Indiana</option>
+                    	<option value="Iowa">Iowa</option>
+                    	<option value="Kansas">Kansas</option>
+                    	<option value="Kentucky">Kentucky</option>
+                    	<option value="Louisiana">Louisiana</option>
+                    	<option value="Maine">Maine</option>
+                    	<option value="Maryland">Maryland</option>
+                    	<option value="Massachusetts">Massachusetts</option>
+                    	<option value="Michigan">Michigan</option>
+                    	<option value="Minnesota">Minnesota</option>
+                    	<option value="Mississippi">Mississippi</option>
+                    	<option value="Missouri">Missouri</option>
+                    	<option value="Montana">Montana</option>
+                    	<option value="Nebraska">Nebraska</option>
+                    	<option value="Nevada">Nevada</option>
+                    	<option value="New Hampshire">New Hampshire</option>
+                    	<option value="New Jersey">New Jersey</option>
+                    	<option value="New Mexico">New Mexico</option>
+                    	<option value="New York">New York</option>
+                    	<option value="North Carolina">North Carolina</option>
+                    	<option value="North Dakota">North Dakota</option>
+                    	<option value="Ohio">Ohio</option>
+                    	<option value="Oklahoma">Oklahoma</option>
+                    	<option value="Oregon">Oregon</option>
+                    	<option value="Pennsylvania">Pennsylvania</option>
+                    	<option value="Rhode Island">Rhode Island</option>
+                    	<option value="South Carolina">South Carolina</option>
+                    	<option value="South Dakota">South Dakota</option>
+                    	<option value="Tennessee">Tennessee</option>
+                    	<option value="Texas">Texas</option>
+                    	<option value="Utah">Utah</option>
+                    	<option value="Vermont">Vermont</option>
+                    	<option value="Virginia">Virginia</option>
+                    	<option value="Washington">Washington</option>
+                    	<option value="West Virginia">West Virginia</option>
+                    	<option value="Wisconsin">Wisconsin</option>
+                    	<option value="Wyoming">Wyoming</option>
+                    </select>
                    <input id="submit" name="submit" type="submit" value="Submit">
                 </form>
                 <div class="text-center">
                 <a href="#map"><button>Jump to Map</button></a>
             </div>
              </div>
-             <div class="col-xs-12 col-md-12 col-lg-6" style="height:400px;overflow:auto;margin-bottom:50px">
+             <div class="col-xs-11 col-md-12 col-lg-7" style="height:400px;overflow:auto;margin-bottom:50px">
                     <table class="table table-striped table-fixed">
                         <thead>
                             <tr>
