--- a/main.html
+++ b/main.html
@@ -101,7 +101,7 @@
                 <a href="#map"><button>Jump to Map</button></a>
             </div>
              </div>
-             <div class="col-xs-11 col-md-12 col-lg-7" style="height:400px;overflow:auto;margin-bottom:50px">
+             <div class="col-xs-11 col-md-12 col-lg-6 col-lg-offset-1" style="height:400px;overflow:auto;margin-bottom:50px">
                     <table class="table table-striped table-fixed">
                         <thead>
                             <tr>
