--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="header">
         <h1 class="title">Beer Me!</h1>
+        <h3 class="quote">enter to find breweries near you</h3>
     </div>
     <div id="container">
       <div class="pour"></div>
@@ -36,7 +37,7 @@
     <!-- <h2 class="animated drunk">Beer me bartender!</h2> -->
 
     <div class="hidden" id="button">
-        <a class="btn" href="main.html">Enter</a>
+        <a class="btn" href="main.html">Find me a Beer!</a>
     </div>
 
 
