--- a/about.html
+++ b/about.html
@@ -1,47 +1,50 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <link rel="icon" href="images/icon.png">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
-        <link rel="stylesheet" href="style/main.css">
-        <title>Beer Me!</title>
-    </head>
-    <body>
-        <nav class="navbar navbar-default navbar-fixed-top">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+
+<head>
+   <meta charset="utf-8">
+   <link rel="icon" href="images/icon.png">
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
+   <link rel="stylesheet" href="style/main.css">
+   <title>Beer Me!</title>
+</head>
+
+<body>
+   <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+         <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="main.html">BEER ME!</a>
-                    <img src="images/icon.png">
-                </div>
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="about.html" class="link">About Me</a></li>
-                        <li><a href="contact.html" class="link">Contact Me</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 col-lg-offset-3">
-                    <h1 class="title">About Me</h1>
-                    <p>My name is Erik Mura and I am a student at Galvanize. This is my very first web app I've created, I hope you like it. Please feel free to go search for breweries all over the US!</p>
-                </div>
-            </div>
-        </div>
+            <a class="navbar-brand" href="main.html">BEER ME!</a>
+            <img src="images/icon.png">
+         </div>
+         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+               <li><a href="about.html" class="link">About Me</a></li>
+               <li><a href="contact.html" class="link">Contact Me</a></li>
+            </ul>
+         </div>
+      </div>
+   </nav>
+   <div class="container">
+      <div class="row">
+         <div class="col-lg-6 col-lg-offset-3">
+            <h1 class="title">About Me</h1>
+            <p>My name is Erik Mura and I am a student at Galvanize. This is my very first web app I've created, I hope you like it. Please feel free to go search for
+               breweries all over the US!</p>
+         </div>
+      </div>
+   </div>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-        <script src="style/main.js"></script>
-        </script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    </body>
-</html>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+   <script src="style/main.js"></script>
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</body>
+
+</html> 
