--- a/main.html
+++ b/main.html
@@ -97,13 +97,13 @@
                     	<option value="Wisconsin">Wisconsin</option>
                     	<option value="Wyoming">Wyoming</option>
                     </select>
-               <input id="submit" name="submit" type="submit" value="Submit">
+               <input id="submit" name="submit" type="submit" value="Find me Beer">
             </form>
             <div class="text-center">
                <a href="#map"><button>Jump to Map</button></a>
             </div>
          </div>
-         <div class="col-xs-11 col-md-12 col-lg-6 col-lg-offset-1" style="height:400px;overflow:auto;margin-bottom:50px">
+         <div class="col-xs-11 col-md-12 col-lg-8" style="height:400px;overflow:auto;margin-bottom:50px;margin-right:0px">
             <table class="table table-striped table-fixed">
                <thead>
                   <tr>
