--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
    <h3 class="quote">Beer is living proof that God loves use and wants us to be happy</h3>
    <div class="container-fluid">
       <div class="row">
-         <div class="col-xs-10 col-xs-offset-1 col-md-10 col-md-offset-1 col-lg-4">
+         <div class="col-xs-10 col-md-10 col-lg-4 col-xs-offset-1 col-md-offset-1">
             <h4>Please search by city and state</h4>
             <form id="search">
                <label for="city" class="city">City</label>
@@ -103,7 +103,7 @@
                <a href="#map"><button>Jump to Map</button></a>
             </div>
          </div>
-         <div class="col-xs-10 col-xs-offset-1 col-md-10 col-md-offset-1 col-lg-8" style="height:400px;overflow:auto;margin-bottom:50px;margin-right:0px">
+         <div class="col-xs-10 col-md-10 col-lg-8 col-xs-offset-1 col-md-offset-1 " style="height:400px;overflow:auto;margin-bottom:50px;margin-right:0px">
             <table class="table table-striped table-fixed">
                <thead>
                   <tr>
