--- a/about.html
+++ b/about.html
@@ -16,11 +16,11 @@
       <div class="container-fluid">
          <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    </button>
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
             <a class="navbar-brand" href="main.html">BEER ME!</a>
             <img src="images/icon.png">
          </div>
@@ -36,8 +36,7 @@
       <div class="row">
          <div class="col-lg-6 col-lg-offset-3">
             <h1 class="title">About Me</h1>
-            <p>My name is Erik Mura and I am a student at Galvanize. This is my very first web app I've created, I hope you like it. Please feel free to go search for
-               breweries all over the US!</p>
+            <p>Welcome to my first webapp, Beer Me! My name is Erik Mura and I am currently a student at Galvanize. Please feel free to go search for breweries all over the US!</p>
          </div>
       </div>
    </div>
@@ -46,5 +45,4 @@
    <script src="style/main.js"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
-
-</html> 
+</html>
