--- a/contact.html
+++ b/contact.html
@@ -15,11 +15,11 @@
       <div class="container-fluid">
          <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    </button>
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
             <a class="navbar-brand" href="main.html">BEER ME!</a>
             <img src="images/icon.png">
          </div>
@@ -35,7 +35,7 @@
       <div class="row">
          <div class="col-xs-6 col-md-6 col-lg-6 col-lg-offset-3">
             <h1 class="title">Contact Me</h1>
-            <h5>Please contact me below!</h5>
+            <h5>Please contact me below</h5>
             <form>
                <div class="form-group">
                   <label for="exampleInputName2">Name</label>
@@ -57,5 +57,4 @@
    <script src="style/main.js"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
-
 </html>
